echo-3scale/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echoapi
  labels:
    app: echoapi
    app.kubernetes.io/component: echoapi
    app.kubernetes.io/instance: echoapi
    app.kubernetes.io/part-of: echoapi
    app.kubernetes.io/name: echoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoapi
  template:
    metadata:
      labels:
        app: echoapi
    spec:
      containers:
        - name: echoapi
          image: quay.io/3scale/echoapi:stable
          ports:
            - containerPort: 9292
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
