echo-3scale/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: echoapi
  labels:
    app: echoapi
    app.kubernetes.io/component: echoapi
    app.kubernetes.io/instance: echoapi
    app.kubernetes.io/part-of: echoapi
spec:
  to:
    kind: Service
    name: echoapi
    weight: 100
  port:
    targetPort: 9292-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
